--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>How Spotify Handles Offline Downloads</title> <!-- <=60 chars -->
+  <meta name="google-site-verification" content="MQHMijfabREZX5kATiYUF0IyacLi3MVw9BKz2vcBbDk" />
+  <link rel="canonical" href="https://offline-downloads-tech.pages.dev/">
+  <title>How Spotify Handles Offline Downloads and  simple MP3 files they are encrypted</title> <!-- <=60 chars -->
   <meta name="description" content="Technical explanation of how Spotify encrypts, caches and serves offline downloads — DRM, storage, licensing checks and user best practices." /> <!-- <=160 chars -->
   <meta name="robots" content="index,follow"/>
   <meta name="keywords" content="Spotify offline downloads, DRM, cache, encrypted files, offline playback, Spotify Premium, storage" />
@@ -178,3 +180,4 @@
   <script>document.getElementById('yr').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
