--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     
 
       <h2>One-line summary</h2>
-      <p><a href="https://spotify-music-ai.vercel.app/" target="_blank" rel="noopener">APK Spotify Premium</a> downloads are not simple MP3 files — they are encrypted, app-bound assets stored in private storage and playable only through the authorized Spotify client after license validation. The offline system combines DRM-like encryption, periodic online license refresh, and smart cache management to balance user convenience with rights management.</p>
+      <p><a href="https://spotipremiums.com/" target="_blank" rel="noopener">APK Spotify Premium</a> downloads are not simple MP3 files — they are encrypted, app-bound assets stored in private storage and playable only through the authorized Spotify client after license validation. The offline system combines DRM-like encryption, periodic online license refresh, and smart cache management to balance user convenience with rights management.</p>
 
       <h2>High-level architecture</h2>
       <p>The simplified flow is:</p>
@@ -180,4 +180,5 @@
   <script>document.getElementById('yr').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
 
